--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 70px;
+}
+
+h2 {
+  margin-bottom: 15px;
+  color: cadetblue;
+}
+
+input {
+  width: 100%;
+  border: none;
+  height: 20px;
+  border-bottom: 2px solid turquoise;
+  color: rgb(138, 135, 135);
+  display: block;
+  margin-bottom: 10px;
+}
+
+input:focus {
+  outline: none;
+}
+
+.card {
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.grid-card {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid teal;
+  flex: 1 0 20%;
+}
+
+.card p { 
+  text-align: center;
+  padding: 5px;
+  text-align: center;
+}
+
+.card img {
+  max-height: 170px;
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.loading-wrap {
+  width: 213px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.loading-wrap img {
+  max-width: 100%;
 }
